Make checkbox visible on list-item view and fix footer z-index in media picker

--- a/public/assets/src/angular-media-picker/less/components/_panel.less
+++ b/public/assets/src/angular-media-picker/less/components/_panel.less
@@ -36,6 +36,7 @@
     -webkit-transition: all .25s;
     -moz-transition: all .25s;
     transition: all .25s;
+    z-index: 10;
 
     &.collapsed {
       bottom: -50px;
