--- a/public/assets/src/angular-media-picker/less/pages/_explore.less
+++ b/public/assets/src/angular-media-picker/less/pages/_explore.less
@@ -129,6 +129,7 @@
 
         &:before {
           left: 3.2px;
+          opacity: 1;
           right: auto;
           top: -3.2px;
         }
